Clase06/04-despliegue-azure/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend1-app
      env: dev
  template:
    metadata:
      labels:
        app: backend1-app
        env: dev
    spec:
      containers:
        - name: backend1-container
          image: cursodocker10.azurecr.io/backend1
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3010
            initialDelaySeconds: 2
            periodSeconds: 3
          resources:
            limits:
              memory: "200Mi"
              cpu: "0.5"
            requests:
              memory: "128Mi"
              cpu: "0.25"
