Clase06/04-despliegue-azure/backend2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend2-app
      env: dev
  template:
    metadata:
      labels:
        app: backend2-app
        env: dev
    spec:
      containers:
        - name: backend2-container
          image: cursodocker10.azurecr.io/backend2
          imagePullPolicy: Always
          ports:
            - containerPort: 3020
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3020
            initialDelaySeconds: 2
            periodSeconds: 3
          resources:
            limits:
              memory: "200Mi"
              cpu: "0.5"
            requests:
              memory: "128Mi"
              cpu: "0.25"
