Clase06/04-despliegue-azure/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
      env: dev
  template:
    metadata:
      labels:
        app: frontend-app
        env: dev
    spec:
      containers:
        - name: frontend-container
          image: cursodocker10.azurecr.io/frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 3
          resources:
            limits:
              memory: "200Mi"
              cpu: "0.5"
            requests:
              memory: "128Mi"
              cpu: "0.25"
